[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Scenes/MainMenuButton.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Roboto-Medium.ttf"

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Roboto-Medium.ttf"

[sub_resource type="DynamicFont" id=4]
size = 108
font_data = SubResource( 3 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.0
margin_top = -130.759
margin_right = 104.0
margin_bottom = -26.7585
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "PLAY"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = -23.0
margin_right = 223.0
margin_bottom = 81.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "INSTRUCTIONS"
flat = true

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.0
margin_top = 78.3095
margin_right = 104.0
margin_bottom = 182.31
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "QUIT"
flat = true

[node name="Difficulty" type="OptionButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 106.368
margin_top = -102.0
margin_right = 192.368
margin_bottom = -60.0
text = "Easy"
items = [ "Easy", null, false, 0, null, "Medium", null, false, 1, null, "Hard", null, false, 2, null, "Expert", null, false, 3, null, "Insane", null, false, 4, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -217.0
margin_top = -295.0
margin_right = 213.0
margin_bottom = -164.0
custom_fonts/normal_font = SubResource( 4 )
text = "TYPE IT!"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="PlayButton" to="." method="_on_PlayButton_button_up"]
[connection signal="button_up" from="InstructionButton" to="." method="_on_InstructionButton_button_up"]
[connection signal="button_up" from="QuitButton" to="." method="_on_QuitButton_button_up"]
[connection signal="item_selected" from="Difficulty" to="." method="_on_Difficulty_item_selected"]
